--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2>Sản Phẩm Nổi Bật</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="images/product1.png" alt="Cà Chua Hữu Cơ">
+                        <img src="product1.png" alt="Cà Chua Hữu Cơ">
                         <h4>Cà Chua Hữu Cơ</h4>
                         <p class="price">55.000 VNĐ / kg</p>
                     </div>
@@ -121,4 +121,5 @@
         </div>
     </div>
 </footer>
+
 </html>
