--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section id="products">
             <div class="container">
                 <h2>Sản Phẩm Nổi Bật</h2>
-                <div class="product-grid">
+                <div class="images/product-grid">
                     <div class="product-card">
                         <img src="product1.png" alt="Cà Chua Hữu Cơ">
                         <h4>Cà Chua Hữu Cơ</h4>
@@ -123,3 +123,4 @@
 </footer>
 
 </html>
+
