--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h3>Gửi Lời Nhắn Cho Chúng Tôi</h3>
             <p>Bạn có câu hỏi hoặc muốn đặt hàng số lượng lớn? Hãy điền vào biểu mẫu dưới đây.</p>
             
-            <form action="https://formspree.io/f/your_form_id" method="POST" class="contact-form">
+            <form action="https://formspree.io/f/myznvqar" method="POST" class="contact-form">
                 <div class="form-group">
                     <input type="text" name="name" placeholder="Tên của bạn" required>
                     <input type="email" name="email" placeholder="Email của bạn" required>
@@ -105,7 +105,7 @@
     
             <div class="contact-info">
                 <p><strong>Hotline:</strong> 0904977386</p>
-                <p><strong>Địa chỉ:</strong> 123 Đường ABC, Phường XYZ, TP. Vinh, Nghệ An</p>
+                <p><strong>Địa chỉ:</strong> 103 Đường Nguyễn Sinh Cung, Phường cửa Lò, TP. Vinh, Nghệ An</p>
             </div>
         </div>
     </footer>
@@ -113,3 +113,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
