--- a/index.html
+++ b/index.html
@@ -78,15 +78,25 @@
             </div>
         </section>
 
-        <section id="testimonials">
-            <div class="container">
-                <h2>Khách Hàng Nói Gì Về Chúng Tôi</h2>
-                <div class="testimonial">
-                    <blockquote>"Rau củ rất tươi và ngọt, tôi hoàn toàn yên tâm khi cho cả gia đình sử dụng. Sẽ tiếp tục ủng hộ!"</blockquote>
-                    <cite>- Chị An, Quận 3</cite>
-                </div>
+       <section id="testimonials">
+    <div class="container">
+        <h2>Khách Hàng Nói Gì Về Chúng Tôi</h2>
+        <div class="testimonial-grid">
+            <div class="testimonial">
+                <blockquote>"Rau củ rất tươi và ngọt, tôi hoàn toàn yên tâm khi cho cả gia đình sử dụng. Sẽ tiếp tục ủng hộ!"</blockquote>
+                <cite>- Chị Lan Anh, Quận 1</cite>
             </div>
-        </section>
+            <div class="testimonial">
+                <blockquote>"Giao hàng rất nhanh, rau củ được đóng gói cẩn thận. Mình rất thích dịch vụ của shop."</blockquote>
+                <cite>- Anh Minh, Gò Vấp</cite>
+            </div>
+            <div class="testimonial">
+                <blockquote>"Sản phẩm chất lượng, đúng chuẩn hữu cơ. Từ khi dùng nông sản ở đây, bữa ăn gia đình mình ngon và an tâm hơn hẳn."</blockquote>
+                <cite>- Cô Thanh, TP. Thủ Đức</cite>
+            </div>
+        </div>
+    </div>
+</section>
     </main>
 
     <footer id="contact">
@@ -113,4 +123,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
