--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
             <div class="contact-info">
                 <p><strong>Hotline:</strong> 0904977386</p>
-                <p><strong>Địa chỉ:</strong> 123 Đường ABC, Phường XYZ, TP. Vinh, Nghệ An</p>
+                <p><strong>Địa chỉ:</strong>  103 Đường Nguyễn Sinh Cung, Phường cửa Lò, TP. Vinh, Nghệ Ann</p>
             </div>
         </div>
     </footer>
@@ -141,3 +141,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
