--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <h3>Gửi Lời Nhắn Cho Chúng Tôi</h3>
             <p>Bạn có câu hỏi hoặc muốn đặt hàng số lượng lớn? Hãy điền vào biểu mẫu dưới đây.</p>
 
-            <form action="https://formspree.io/f/your_form_id" method="POST" class="contact-form">
+            <form action="https://formspree.io/f/myznvqar" method="POST" class="contact-form">
                 <div class="form-group">
                     <input type="text" name="name" placeholder="Tên của bạn" required>
                     <input type="email" name="email" placeholder="Email của bạn" required>
@@ -141,4 +141,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
