--- a/index.html
+++ b/index.html
@@ -118,13 +118,15 @@
                     <input type="text" name="name" placeholder="Tên của bạn" required>
                     <input type="email" name="email" placeholder="Email của bạn" required>
                 </div>
-                <textarea name="message" rows="6" placeholder="Nội dung lời nhắn..." required></textarea>
+                <input type="tel" name="phone" placeholder="Số điện thoại của bạn" required>
+                <input type="text" name="address" placeholder="Địa chỉ nhận hàng" required>
+                <textarea name="message" rows="6" placeholder="Nội dung lời nhắn... (tùy chọn)"></textarea>
                 <button type="submit" class="cta-button">Gửi Lời Nhắn</button>
             </form>
 
             <div class="contact-info">
                 <p><strong>Hotline:</strong> 0904977386</p>
-                <p><strong>Địa chỉ:</strong>  103 Đường Nguyễn Sinh Cung, Phường cửa Lò, TP. Vinh, Nghệ Ann</p>
+                <p><strong>Địa chỉ:</strong> 103 Đường Nguyễn Sinh Cung, Phường cửa Lò, TP. Vinh, Nghệ An</p>
             </div>
         </div>
     </footer>
@@ -141,5 +143,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
